feat: no audio preload

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                 expérimental<br>
                                 et partenarialde La Transfo selon toi?
                             </figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/ce/1-experimental.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/ce/1-experimental.m4a">lien vers le fichier audio </a>
@@ -406,7 +406,7 @@
 
                         <figure>
                             <figcaption>Quel ont été selon toi les principaux bénéfices de ce cadre?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/ce/2-benefices.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/ce/2-benefices.m4a"> lien vers le fichier audio </a>
@@ -418,7 +418,7 @@
                         <figure>
                             <figcaption>Quels en ont été les limites ou les freins? <br>
                                 Comment aurait-on pu les prévenir ou les lever?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/ce/3-limites.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/ce/3-limites.m4a"> lien vers le fichier audio </a>
@@ -831,7 +831,7 @@
                             <figcaption>Quels sont selon vous les apports principaux de vos disciplines respectives
                                 <br>à la démarche / au programme?
                             </figcaption>
-                            <audio controls src="assets/audio/mp/1-apports.mp3" type="">
+                            <audio controls="controls" preload="none" src="assets/audio/mp/1-apports.mp3" type="">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/mp/1-apports.mp3"> lien vers le fichier audio </a>
                                     pour le télécharger.
@@ -845,7 +845,7 @@
                                 Quels ont été les principaux intérêts / bénéfices <br>
                                 de cette pluridisciplinarité?
                             </figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/mp/2-pluridisciplinarité.mp3" type="">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/mp/2-pluridisciplinarité.mp3"> lien vers le fichier audio</a>
@@ -858,7 +858,7 @@
                             <figcaption>Quelles ont été les limites de cette ambition de pluridisciplinarité <br>
                                 ou les difficultés rencontrées pour la faire vivre?
                             </figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/mp/3-limites.mp3" type="">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/mp/3-limites.mp3">lien vers le fichier audio</a>
@@ -1544,7 +1544,7 @@
 
                         <figure>
                             <figcaption>Qu’est-ce que la présence d’agents a apporté à la démarche?</figcaption>
-                            <audio controls src="assets/audio/a/1-agents.m4a">
+                            <audio controls="controls" preload="none" src="assets/audio/a/1-agents.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/a/1-agents.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -1556,7 +1556,7 @@
                             <figcaption>Quels sont les difficultés rencontrées <br>
                                 dans la mise en place d’une telle démarche?
                             </figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/a/2-difficultes.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/a/2-difficultes.m4a">lien vers le fichier audio</a>
@@ -1567,7 +1567,7 @@
 
                         <figure>
                             <figcaption>Raconter une satisfaction en tant que directeur du labo?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/a/3-satisfactions.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/a/3-satisfactions.m4a">lien vers le fichier audio</a>
@@ -2466,7 +2466,8 @@
                         <figure>
                             <figcaption>L'écosystème d'innovation, de quels acteurs parle-t-on au juste?
                             </figcaption>
-                            <audio controls src="assets/audio/e/1-ecosysteme.m4a" type="audio/mpeg">
+                            <audio controls="controls" preload="none" src="assets/audio/e/1-ecosysteme.m4a"
+                                type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/e/1-ecosysteme.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2477,7 +2478,7 @@
                         <figure>
                             <figcaption>La priorité en matière d'écosystème pendant la Transfo?
                             </figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/e/2-priorite.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/e/2-priorite.m4a">lien vers le fichier audio</a>
@@ -2488,7 +2489,7 @@
 
                         <figure>
                             <figcaption>Quels conseils à donner pour élargir le cercle?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/e/3-conseils.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/e/3-conseils.m4a">lien vers le fichier audio</a>
@@ -2842,7 +2843,8 @@
 
                         <figure>
                             <figcaption>Comment s'est passée la transition entre transfo et labo?</figcaption>
-                            <audio controls src="assets/audio/fl/1-transition.m4a" type="audio/mpeg">
+                            <audio controls="controls" preload="none" src="assets/audio/fl/1-transition.m4a"
+                                type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/fl/1-transition.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2852,7 +2854,7 @@
 
                         <figure>
                             <figcaption>Quelle forme a pris le labo?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/fl/2-forme-labo.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/2-forme-labo.m4a">lien vers le fichier audio</a>
@@ -2862,7 +2864,7 @@
 
                         <figure>
                             <figcaption>Pourquoi avoir choisi un fonctionnement en "résidence"?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/fl/3-residence.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/3-residence.m4a">lien vers le fichier audio</a>
@@ -2873,7 +2875,7 @@
 
                         <figure>
                             <figcaption>Quelle a été l'activité du labo la 1ere année?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/fl/4-activite.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/4-activite.m4a">lien vers le fichier audio</a>
@@ -2885,7 +2887,7 @@
                         <figure>
                             <figcaption>Quelle place est faite aux agents ambassadeurs dans le nouveau labo?
                             </figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/fl/5-place-embassadeurs.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/5-place-embassadeurs.m4a">lien vers le fichier audio</a>
@@ -2896,7 +2898,7 @@
 
                         <figure>
                             <figcaption>Faite vous appel à de nouveaux ambassadeurs?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/fl/6-nouveaux-embassadeurs.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/6-nouveaux-embassadeurs.m4a">lien vers le fichier audio</a>
@@ -2907,7 +2909,7 @@
 
                         <figure>
                             <figcaption>Quelle est la spécificité du labo de la CUD?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/fl/7-specificite.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     a href="assets/audio/fl/7-specificite.m4a">lien vers le fichier audio</a>
@@ -2918,7 +2920,7 @@
 
                         <figure>
                             <figcaption>Quels Défis pour demain?</figcaption>
-                            <audio controls>
+                            <audio controls="controls" preload="none">
                                 <source src="assets/audio/fl/8-defis.m4a" type="audio/mpeg">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/8-defis.m4a">lien vers le fichier audio</a>
