--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,7 @@
 
                         <figure>
                             <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/NxzhQxeZS8o" frameborder="1"
+                            <iframe src="https://www.youtube.com/embed/NxzhQxeZS8o"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                             </iframe>
@@ -1593,7 +1593,7 @@
 
                         <figure>
                             <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/b5meDHC_T4I" frameborder="1"
+                            <iframe src="https://www.youtube.com/embed/b5meDHC_T4I"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                             </iframe>
@@ -2089,7 +2089,7 @@
 
                         <figure>
                             <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/cpTZdel6G_k" frameborder="1"
+                            <iframe src="https://www.youtube.com/embed/cpTZdel6G_k"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </figure>
@@ -2097,14 +2097,14 @@
                         <figure>
                             <figcaption>Qu'avez vous apprécié dans l'implication de La Transfo sur votre projet?
                             </figcaption>
-                            <iframe src="https://www.youtube.com/embed/hiKdEPQrm5A" frameborder="1"
+                            <iframe src="https://www.youtube.com/embed/hiKdEPQrm5A"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </figure>
 
                         <figure>
                             <figcaption>En quoi la démarche Transfo a fait évoluer votre projet?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/vFwH-9JuNVo" frameborder="1"
+                            <iframe src="https://www.youtube.com/embed/vFwH-9JuNVo"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </figure>
