--- a/index.html
+++ b/index.html
@@ -111,23 +111,23 @@
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
-                        <div class="legende">
-                            <p>
+                        <ul class="legende">
+                            <li>
                                 <a href="#contrat">(c) Contrat</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#co-financement">(cf) Co-finencement</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#collectivites">(ic) Inter-collectivités</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#coordination">(co) Coordination</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#adhesion">(a) Adhésion</a>
-                            </p>
-                        </div>
+                            </li>
+                        </ul>
 
                     </div>
 
@@ -396,7 +396,7 @@
                                 et partenarialde La Transfo selon toi?
                             </figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/ce/1-experimental.m4a" type="audio/mpeg">
+                                <source src="assets/audio/ce/1-experimental.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/ce/1-experimental.m4a">lien vers le fichier audio </a>
                                     pour le télécharger.
@@ -407,7 +407,7 @@
                         <figure>
                             <figcaption>Quel ont été selon toi les principaux bénéfices de ce cadre?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/ce/2-benefices.m4a" type="audio/mpeg">
+                                <source src="assets/audio/ce/2-benefices.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/ce/2-benefices.m4a"> lien vers le fichier audio </a>
                                     pour le télécharger.
@@ -419,7 +419,7 @@
                             <figcaption>Quels en ont été les limites ou les freins? <br>
                                 Comment aurait-on pu les prévenir ou les lever?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/ce/3-limites.m4a" type="audio/mpeg">
+                                <source src="assets/audio/ce/3-limites.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/ce/3-limites.m4a"> lien vers le fichier audio </a>
                                     pour le télécharger.</p>
@@ -484,23 +484,23 @@
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
-                        <div class="legende">
-                            <p>
+                        <ul class="legende">
+                            <li>
                                 <a href="#design">(d) Design</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#sociologie">(s) Sociologie</a>
-                            </p>
-                            <p>
-                                <a href="#politiques">(pu) Politiques
-                                    Urbaines</a></p>
-                            <p>
+                            </li>
+                            <li>
+                                <a href="#politiques">(pu) Politiques Urbaines</a></p>
+                            </li>
+                            <li>
                                 <a href="#coaching">(c) Coaching</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#education">(ep) Education Populaire</a>
-                            </p>
-                        </div>
+                            </li>
+                        </ul>
 
 
                         <p><strong>Aérer la machine.</strong> La Transfo fait le pari la pluridisciplinarité,
@@ -923,20 +923,20 @@
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
-                        <div class="legende">
-                            <p>
+                        <ul class="legende">
+                            <li>
                                 <a href="#travail">(t) Travail</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#co-construction">(cc) Co-construction</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#pedagogie">(p) Pédagogie</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#variations">(v) Variations</a>
-                            </p>
-                        </div>
+                            </li>
+                        </ul>
 
                     </div>
 
@@ -1225,14 +1225,14 @@
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
-                        <div class="legende">
-                            <p>
+                        <ul class="legende">
+                            <li>
                                 <a href="#fonctionnements">(ft) Fonctionnements</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#focales">(f) Focales</a>
-                            </p>
-                        </div>
+                            </li>
+                        </ul>
 
                     </div>
 
@@ -1557,7 +1557,7 @@
                                 dans la mise en place d’une telle démarche?
                             </figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/a/2-difficultes.m4a" type="audio/mpeg">
+                                <source src="assets/audio/a/2-difficultes.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/a/2-difficultes.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -1568,7 +1568,7 @@
                         <figure>
                             <figcaption>Raconter une satisfaction en tant que directeur du labo?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/a/3-satisfactions.m4a" type="audio/mpeg">
+                                <source src="assets/audio/a/3-satisfactions.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/a/3-satisfactions.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -1656,26 +1656,26 @@
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
-                        <div class="legende">
-                            <p>
+                        <ul class="legende">
+                            <li>
                                 <a href="#mulhouse">(m) Les megotiers</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#dunkerque">(bf) Le bois du fort</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#metz">(bv) Les bureaux-volants</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#lille">(bc) Le brico concierge</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#strasbourg">(is) Les inscriptions scolaires</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#paris">(pa) Les pieds d'arbres</a>
-                            </p>
-                        </div>
+                            </li>
+                        </ul>
 
                     </div>
 
@@ -2165,14 +2165,14 @@
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
-                        <div class="legende">
-                            <p>
+                        <ul class="legende">
+                            <li>
                                 <a href="#ecosysteme">(ei) Ecosystème interne</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#acteurs">(at) Acteurs du territoire</a>
-                            </p>
-                        </div>
+                            </li>
+                        </ul>
 
                     </div>
 
@@ -2466,8 +2466,7 @@
                         <figure>
                             <figcaption>L'écosystème d'innovation, de quels acteurs parle-t-on au juste?
                             </figcaption>
-                            <audio controls="controls" preload="none" src="assets/audio/e/1-ecosysteme.m4a"
-                                type="audio/mpeg">
+                            <audio controls="controls" preload="none" src="assets/audio/e/1-ecosysteme.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/e/1-ecosysteme.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2479,7 +2478,7 @@
                             <figcaption>La priorité en matière d'écosystème pendant la Transfo?
                             </figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/e/2-priorite.m4a" type="audio/mpeg">
+                                <source src="assets/audio/e/2-priorite.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/e/2-priorite.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2490,7 +2489,7 @@
                         <figure>
                             <figcaption>Quels conseils à donner pour élargir le cercle?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/e/3-conseils.m4a" type="audio/mpeg">
+                                <source src="assets/audio/e/3-conseils.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/e/3-conseils.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2554,16 +2553,17 @@
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
-                        <div class="legende">
-                            <p>
+                        <ul class="legende">
+                            <li>
                                 <a href="#iteration">(it) Itérations</a>
-                            </p>
-                            <p>
+                            </li>
+                            <li>
                                 <a href="#implication">(i) Implication</a>
-                            </p>
-                            <p>
-                                <a href="#exception">(e) Exception</a></p>
-                        </div>
+                            </li>
+                            <li>
+                                <a href="#exception">(e) Exception</a>
+                            </li>
+                        </ul>
                     </div>
 
                     <p><strong>Tracer sa route.</strong> L’expérience des cas pratiques permet de tester des hypothèses
@@ -2843,8 +2843,7 @@
 
                         <figure>
                             <figcaption>Comment s'est passée la transition entre transfo et labo?</figcaption>
-                            <audio controls="controls" preload="none" src="assets/audio/fl/1-transition.m4a"
-                                type="audio/mpeg">
+                            <audio controls="controls" preload="none" src="assets/audio/fl/1-transition.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio. Voici un
                                     <a href="assets/audio/fl/1-transition.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2855,7 +2854,7 @@
                         <figure>
                             <figcaption>Quelle forme a pris le labo?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/fl/2-forme-labo.m4a" type="audio/mpeg">
+                                <source src="assets/audio/fl/2-forme-labo.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/2-forme-labo.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.</p>
@@ -2865,7 +2864,7 @@
                         <figure>
                             <figcaption>Pourquoi avoir choisi un fonctionnement en "résidence"?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/fl/3-residence.m4a" type="audio/mpeg">
+                                <source src="assets/audio/fl/3-residence.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/3-residence.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2876,7 +2875,7 @@
                         <figure>
                             <figcaption>Quelle a été l'activité du labo la 1ere année?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/fl/4-activite.m4a" type="audio/mpeg">
+                                <source src="assets/audio/fl/4-activite.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/4-activite.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2888,7 +2887,7 @@
                             <figcaption>Quelle place est faite aux agents ambassadeurs dans le nouveau labo?
                             </figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/fl/5-place-embassadeurs.m4a" type="audio/mpeg">
+                                <source src="assets/audio/fl/5-place-embassadeurs.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/5-place-embassadeurs.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2899,7 +2898,7 @@
                         <figure>
                             <figcaption>Faite vous appel à de nouveaux ambassadeurs?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/fl/6-nouveaux-embassadeurs.m4a" type="audio/mpeg">
+                                <source src="assets/audio/fl/6-nouveaux-embassadeurs.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/6-nouveaux-embassadeurs.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2910,7 +2909,7 @@
                         <figure>
                             <figcaption>Quelle est la spécificité du labo de la CUD?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/fl/7-specificite.m4a" type="audio/mpeg">
+                                <source src="assets/audio/fl/7-specificite.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     a href="assets/audio/fl/7-specificite.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
@@ -2921,7 +2920,7 @@
                         <figure>
                             <figcaption>Quels Défis pour demain?</figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/fl/8-defis.m4a" type="audio/mpeg">
+                                <source src="assets/audio/fl/8-defis.m4a">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
                                     <a href="assets/audio/fl/8-defis.m4a">lien vers le fichier audio</a>
                                     pour le télécharger.
