feat: correctio click header

--- a/index.html
+++ b/index.html
@@ -1585,17 +1585,13 @@
 
                         <figure>
                             <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/NxzhQxeZS8o"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/NxzhQxeZS8o" allowfullscreen></iframe>
                             </iframe>
                         </figure>
 
                         <figure>
                             <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/b5meDHC_T4I"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/b5meDHC_T4I" allowfullscreen></iframe>
                             </iframe>
                         </figure>
 
@@ -2089,24 +2085,18 @@
 
                         <figure>
                             <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/cpTZdel6G_k"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/cpTZdel6G_k" allowfullscreen></iframe>
                         </figure>
 
                         <figure>
                             <figcaption>Qu'avez vous apprécié dans l'implication de La Transfo sur votre projet?
                             </figcaption>
-                            <iframe src="https://www.youtube.com/embed/hiKdEPQrm5A"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/hiKdEPQrm5A" allowfullscreen></iframe>
                         </figure>
 
                         <figure>
                             <figcaption>En quoi la démarche Transfo a fait évoluer votre projet?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/vFwH-9JuNVo"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/vFwH-9JuNVo" allowfullscreen></iframe>
                         </figure>
 
                     </div>
