feat: mobil accrordion font size

--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,8 @@
 
                         <figure>
                             <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/b5meDHC_T4I" allowfullscreen></iframe>
+                            <iframe class="iframe" src="https://www.youtube.com/embed/b5meDHC_T4I"
+                                allowfullscreen></iframe>
                             </iframe>
                         </figure>
 
