feat: text correction

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                                 <a href="#sociologie">(s) Sociologie</a>
                             </li>
                             <li>
-                                <a href="#politiques">(pu) Politiques Urbaines</a></p>
+                                <a href="#politiques">(pu) Politiques Urbaines</a>
                             </li>
                             <li>
                                 <a href="#coaching">(c) Coaching</a>
