feat: responsive illustrations "about"

--- a/about.html
+++ b/about.html
@@ -93,18 +93,17 @@
 
                     <div class="bg general-bg"
                         style="background-image: url(images/about/generale-legendes.svg), url(images/about/generale.png);">
-                        <div class="container bg about-bg"
-                            style="background-image: url(images/about/about-legendes.svg), url(images/about/about-illustrations.png);">
+                        <div class="container bg about-bg top"
+                            style="background-image: url(images/about/about-legendes-1.svg), url(images/about/about-illustrations-1.png);">
 
                             <!-- A PROPOS -->
 
-                            <div class="side first">
+                            <div class="side">
 
                                 <p>La Transfo Code Source <br>
                                     <strong>« open source » * le protocole de création de laboratoires d’innovation
                                         internes</strong> aux collectivités territoriales, expérimenté lors du programme
-                                    La
-                                    Transfo entre 2016 et 2020. Sept principes actifs composent La Transfo :
+                                    La Transfo entre 2016 et 2020. Sept principes actifs composent La Transfo :
                                 </p>
 
                             </div>
@@ -117,28 +116,29 @@
                                 <li><strong>s’appuyer sur l'écosystème</strong> (e)</li>
                                 <li><strong>se projeter dans le futur labo</strong> (fl)</li>
                             </ul>
-                            <div class="side space">
+                            <div class="side">
 
                                 <p>Ce site vise à expliciter ces principes et apporte un retour d’expérience sur leur
-                                    mise
-                                    en oeuvre dans les différentes collectivités engagées dans La Transfo. L’objectif
-                                    est de
-                                    permettre à chacun de se réapproprier et d’ajuster ces principes d’action à son
-                                    contexte.
+                                    mise en oeuvre dans les différentes collectivités engagées dans La Transfo.
+                                    L’objectif est de permettre à chacun de se réapproprier et d’ajuster ces principes
+                                    d’action à son contexte.
                                 </p>
 
                             </div>
-                            <div class="side definition last">
+                        </div>
+
+                        <div class="container bg about-bg bottom"
+                            style="background-image: url(images/about/about-legendes-2.svg), url(images/about/about-illustrations-2.png);">
+
+                            <div class="side definition">
 
                                 <p>* En informatique, le code source est un texte qui présente les instructions
                                     composant un programme sous une forme lisible, telles qu'elles ont été écrites dans
-                                    un
-                                    langage de programmation.<br>
+                                    un langage de programmation.<br>
                                     Dans la communauté open source, les développeurs mettent gratuitement le code source
-                                    à
-                                    disposition d’autres programmeurs pour inciter à la réutilisation de briques
-                                    logicielles
-                                    développées ailleurs et ainsi développer ou améliorer des logiciels à long terme.
+                                    à disposition d’autres programmeurs pour inciter à la réutilisation de briques
+                                    logicielles développées ailleurs et ainsi développer ou améliorer des logiciels à
+                                    long terme.
                                 </p>
                             </div>
 
