feat: anchors offset

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 
                             <!-- CONTRAT -->
 
-                            <div id="contrat" class="post-it contrat top">
+                            <div class="post-it contrat top">
+                                <span id="contrat" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>La forme du contrat</h3>
@@ -179,7 +180,8 @@
 
                             <!-- CO-FINANCEMANT -->
 
-                            <div id="co-financement" class="post-it co-financement top">
+                            <div class="post-it co-financement top">
+                                <span id="co-financement" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Le co-financement du programme</h3>
@@ -196,7 +198,8 @@
 
                             <!-- INTER-COLLECTIVITES -->
 
-                            <div id="collectivites" class="post-it inter-collectivites">
+                            <div class="post-it inter-collectivites">
+                                <span id="collectivites" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>La dimension inter-collectivités du programme </h3>
@@ -209,7 +212,8 @@
 
                             <!-- COORDINATION -->
 
-                            <div id="coordination" class="post-it coordination top">
+                            <div class="post-it coordination top">
+                                <span id="coordination" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>La coordination bicéphale</h3>
@@ -226,7 +230,8 @@
 
                             <!-- ADHESION -->
 
-                            <div id="adhesion" class="post-it adhesion">
+                            <div class="post-it adhesion">
+                                <span id="adhesion" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>L’adhésion des collectivités à La 27e Région</h3>
@@ -543,7 +548,8 @@
 
                             <!-- DESIGN -->
 
-                            <div id="design" class="post-it design top">
+                            <div class="post-it design top">
+                                <span id="design" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>DESIGN</h3>
@@ -583,7 +589,8 @@
 
                             <!-- COACHING -->
 
-                            <div id="coaching" class="post-it coaching">
+                            <div class="post-it coaching">
+                                <span id="coaching" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Coaching</h3>
@@ -608,7 +615,8 @@
 
                             <!-- SOCIOLOGIE -->
 
-                            <div id="sociologie" class="post-it sociologie">
+                            <div class="post-it sociologie">
+                                <span id="sociologie" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Sociologie</h3>
@@ -638,7 +646,8 @@
 
                             <!-- POLITIQUES URBAINES -->
 
-                            <div id="politiques" class="post-it politiques">
+                            <div class="post-it politiques">
+                                <span id="politiques" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Politiques urbaines</h3>
@@ -662,7 +671,8 @@
 
                             <!-- EDUCATION POPULAIRE -->
 
-                            <div id="education" class="post-it education">
+                            <div class="post-it education">
+                                <span id="education" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Education populaire</h3>
@@ -983,7 +993,8 @@
 
                             <!-- TRAVAIL -->
 
-                            <div id="travail" class="post-it travail top">
+                            <div class="post-it travail top">
+                                <span id="travail" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Les temps de travail</h3>
@@ -1000,7 +1011,8 @@
 
                             <!-- CO-CONSTRUCTION -->
 
-                            <div id="co-construction" class="post-it co-construction">
+                            <div class="post-it co-construction">
+                                <span id="co-construction" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Les temps de co-construction</h3>
@@ -1017,7 +1029,8 @@
 
                             <!-- PEDAGOGIE -->
 
-                            <div id="pedagogie" class="post-it pedagogie">
+                            <div class="post-it pedagogie">
+                                <span id="pedagogie" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Les temps pédagogiques </h3>
@@ -1032,6 +1045,8 @@
                     </div>
 
                     <div class="container">
+                        <span id="variations" class="anchor"></span>
+
                         <div class="variations-box">
 
                             <h3>Variations :</h3>
@@ -1308,7 +1323,8 @@
 
                             <!-- SUPERIEUR DIRECT -->
 
-                            <div id="fonctionnements" class="post-it superieur">
+                            <div class="post-it superieur">
+                                <span id="fonctionnements" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Différents modes de fonctionnement du groupe</h3>
@@ -1364,7 +1380,8 @@
 
                             <!-- COLLECTIF -->
 
-                            <div id="focales" class="post-it collectif">
+                            <div class="post-it collectif">
+                                <span id="focales" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Des focales différentes</h3>
@@ -1718,7 +1735,8 @@
 
                             <!-- METZ -->
 
-                            <div id="metz" class="post-it metz top">
+                            <div class="post-it metz top">
+                                <span id="metz" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Metz, les bureaux volants</h3>
@@ -1748,7 +1766,8 @@
 
                             <!-- LILLE -->
 
-                            <div id="lille" class="post-it lille">
+                            <div class="post-it lille">
+                                <span id="lille" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Lille, le Brico Concierge</h3>
@@ -1781,7 +1800,8 @@
 
                             <!-- MULHOUSE -->
 
-                            <div id="mulhouse" class="post-it mulhouse">
+                            <div class="post-it mulhouse">
+                                <span id="mulhouse" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Mulhouse, les mégotiers</h3>
@@ -1809,7 +1829,8 @@
 
                             <!-- STRASBOURG -->
 
-                            <div id="strasbourg" class="post-it strasbourg">
+                            <div class="post-it strasbourg">
+                                <span id="strasbourg" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Strasbourg, les inscriptions scolaires</h3>
@@ -1842,7 +1863,8 @@
 
                             <!-- PARIS -->
 
-                            <div id="paris" class="post-it paris">
+                            <div class="post-it paris">
+                                <span id="paris" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Paris, les pieds d’arbres</h3>
@@ -1872,7 +1894,8 @@
 
                             <!-- DUNKERQUE -->
 
-                            <div id="dunkerque" class="post-it dunkerque">
+                            <div class="post-it dunkerque">
+                                <span id="dunkerque" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Dunkerque le Bois du fort</h3>
@@ -2221,7 +2244,8 @@
 
                             <!-- ECOSYSTEME INTERNE -->
 
-                            <div id="ecosysteme" class="post-it ecosysteme top">
+                            <div class="post-it ecosysteme top">
+                                <span id="ecosysteme" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>En direction de l’écosystème interne</h3>
@@ -2250,7 +2274,8 @@
 
                             <!-- LES ACTEURS DU TERRITOIRE -->
 
-                            <div id="acteurs" class="post-it acteurs">
+                            <div class="post-it acteurs">
+                                <span id="acteurs" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Avec les acteurs du territoire</h3>
@@ -2590,7 +2615,8 @@
 
                             <!-- PROCESSUS ITÉRATIF -->
 
-                            <div id="iterations" class="post-it iterations">
+                            <div class="post-it iterations">
+                                <span id="iterations" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Un processus itératif</h3>
@@ -2616,7 +2642,8 @@
 
                             <!-- IMPLIQUER LES USAGERS -->
 
-                            <div id="impliquation" class="post-it impliquation">
+                            <div class="post-it impliquation">
+                                <span id="impliquation" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Impliquer les futurs usagers et complices du labo dans la co-construction</h3>
@@ -2649,7 +2676,8 @@
 
                             <!-- REGION GRAND EST -->
 
-                            <div id="exception" class="post-it exception">
+                            <div class="post-it exception">
+                                <span id="exception" class="anchor"></span>
                                 <div class="container">
 
                                     <h3>Une exception à la règle</h3>
